--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="pt-br">
 <head>
 	<meta charset="UTF-8">
-	<title>Raposa Digital | Visual Studio</title>
+	<title>Raposa Digital - Em breve...</title>
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<meta name='theme-color' content='#2d2d2d'/>
-	<meta name="description" content="Trabalhamos com Animação 3D, Desenvolvimento Web, Ilustração, Marketing digital, Vizualização Arquitetônica(Archviz), Front-end, Identidade visual.">
-	<meta name="keywords" content="sites, web, desenvolvimento, html, raposa, 3d, modelagem, ambientação">
+	<meta name="description" content="Espercializados em Animação 3D, Desenvolvimento Web, Ilustração, Marketing digital, Vizualização Arquitetônica(Archviz), Front-end, Identidade visual, Motion Graphics.">
+	<meta name="keywords" content="Criação de Sites em Fortaleza, Animação 3d, Web Desing em fortaleza">
 	<meta name="viewport" content="width=320px">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand|Roboto" rel="stylesheet">
 	<link rel="icon" href="favicon.ico" sizes="32x32"/>
@@ -18,7 +18,8 @@
 		<div class="content">
 			<div class= "title">
 				<h1 itemprop="name">Raposa Digital</h1>
-				<h2 class="subtitle" ><span class="breve"></span></h2>
+				<h2 class="none">Espercializados em Animação 3D, Desenvolvimento Web, Ilustração, Marketing digital, Vizualização Arquitetônica(Archviz), Front-end, Identidade visual, Motion Graphics.</h2>
+				<h4 class="subtitle" ><span class="breve"></span></h4>
 				<div class="raposa"><img  itemprop="image" src="img/raposa.gif" draggable="false" height="300px" oncontextmenu="return false" alt="Raposa olhando para cima logo polygon"></div>
 				<div><h3> Em breve...</h3></div>
 					<a class="gplus" href="https://www.facebook.com/Raposa-Digital-425892010911314/"><i class="fa fa-facebook-official face" aria-hidden="true"></i></a>
